Update to jdk 21 and latest dependency versions