@@ -1,12 +1,12 @@
 plugins {
     id "jacoco"
-    id "org.jetbrains.intellij" version "0.7.3"
-    id "com.github.hierynomus.license" version "0.15.0"
+    id "org.jetbrains.intellij" version "1.17.4"
+    id "com.github.hierynomus.license" version "0.16.1"
     id "com.github.gradle-git-version-calculator" version "1.1.0"
-    id 'net.researchgate.release' version '2.6.0'
-    id "com.gradle.plugin-publish" version "0.10.1"
-    id "com.github.spotbugs" version "3.0.0"
-    id "org.sonarqube" version "2.8"
+    id 'net.researchgate.release' version '3.1.0'
+    id "com.gradle.plugin-publish" version "1.3.0"
+    id "com.github.spotbugs" version "6.0.27"
+    id "org.sonarqube" version "6.0.1.5171"
     id 'signing'
 }
 
@@ -16,7 +16,7 @@ repositories {
 
 tasks{
     runPluginVerifier {
-        ideVersions = "2021.1"
+        ideVersions = ["2024.3"]
     }
 }
 
@@ -24,19 +24,21 @@ group = "org.wso2.lsp4intellij"
 version = gitVersionCalculator.calculateVersion("v")
 
 intellij {
-    version '2021.1'
-    type 'IC'
-    updateSinceUntilBuild false
+    version = '2024.3'
+    type = 'IC'
+    updateSinceUntilBuild = false
 }
 
 dependencies {
-    compile group: 'org.eclipse.lsp4j', name: 'org.eclipse.lsp4j', version: '0.15.0'
-    compile group: 'com.vladsch.flexmark', name: 'flexmark', version: '0.34.60'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
-    testCompile group: 'junit', name: 'junit', version: '4.13.2'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.9.0'
-    testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
-    testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
+    implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.23.1'
+    implementation 'com.vladsch.flexmark:flexmark:0.64.8'
+    implementation 'org.apache.commons:commons-lang3:3.17.0'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:5.14.2'
+}
+
+test {
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
 
 sourceSets {
@@ -47,8 +49,11 @@ sourceSets {
     }
 }
 
-sourceCompatibility = 11
-targetCompatibility = 11
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
 
 license {
     header = rootProject.file("resources/license/HEADER.txt")
@@ -60,22 +65,23 @@ license {
     exclude("/**/*.png")
 }
 
+spotbugs {
+    ignoreFailures = true
+}
+
 spotbugsMain {
-    it.effort "max"
-    it.reportLevel "high"
-    it.reports {
-        xml.enabled false
-        html.enabled true
+    reports {
+        xml.required = false
+        html.required = true
     }
     def excludeFile = file('spotbugs-exclude.xml')
     if(excludeFile.exists()) {
-        it.excludeFilter = excludeFile
+        excludeFilter = excludeFile
     }
-    classpath += sourceSets."${(it.name - ~/^spotbugs/).uncapitalize()}".with { it.compileClasspath + project.configurations."${it.compileOnlyConfigurationName}" }
 }
 
 spotbugsTest {
-    it.enabled = false
+    enabled = false
 }
 
 check {
@@ -84,8 +90,8 @@ check {
 
 jacocoTestReport {
     reports {
-        xml.enabled = true
-        xml.destination = new File("$buildDir/reports/jacoco/test/jacoco.xml")
+        xml.required = true
+        xml.outputLocation = layout.buildDirectory.file("reports/jacoco/test/jacoco.xml")
     }
 }
 
@@ -96,7 +102,7 @@ sonarqube {
         property("sonar.organization", "ballerina-platform")
         property("sonar.projectKey", "ballerina-platform_lsp4intellij")
         property("sonar.projectName", "LSP4IntelliJ")
-        property("sonar.coverage.jacoco.xmlReportPaths", "$buildDir/reports/jacoco/test/jacoco.xml")
+        property("sonar.coverage.jacoco.xmlReportPaths", layout.buildDirectory.file("reports/jacoco/test/jacoco.xml").get().asFile.path)
     }
 }
 
@@ -116,9 +122,9 @@ release {
     buildTasks = ['jar']
 
     git {
-        requireBranch = 'release-stage'
-        pushToRemote = 'upstream'
-        commitVersionFileOnly = false
-        signTag = false
+        requireBranch.set('release-stage')
+        pushToRemote.set('upstream')
+        commitVersionFileOnly.set(false)
+        signTag.set(false)
     }
 }
